[gd_scene load_steps=6 format=2]

[ext_resource path="res://screens/landing_screen.gd" type="Script" id=1]
[ext_resource path="res://assets/default.theme" type="Theme" id=2]
[ext_resource path="res://screens/gui/settings.tscn" type="PackedScene" id=3]
[ext_resource path="res://screens/gui/runner.tscn" type="PackedScene" id=4]
[ext_resource path="res://screens/gui/popups/about.tscn" type="PackedScene" id=5]

[node name="LandingScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.172549, 0.231373, 1 )

[node name="RootControl" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="RootControl"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="DEFAULT_GUI_LANDING_SCREEN_RUNNERS" type="PanelContainer" parent="RootControl/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.5
margin_top = 35.5
margin_right = -7.5
margin_bottom = -7.5
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Runners" parent="RootControl/TabContainer/DEFAULT_GUI_LANDING_SCREEN_RUNNERS" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 9.0
margin_top = 6.0
margin_right = 1556.0
margin_bottom = 831.0

[node name="DEFAULT_GUI_LANDING_SCREEN_EXTENSIONS" type="PanelContainer" parent="RootControl/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.5
margin_top = 35.5
margin_right = -7.5
margin_bottom = -7.5
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="RootControl/TabContainer/DEFAULT_GUI_LANDING_SCREEN_EXTENSIONS"]
margin_left = 9.0
margin_top = 6.0
margin_right = 1556.0
margin_bottom = 831.0

[node name="ExtensionsList" type="VBoxContainer" parent="RootControl/TabContainer/DEFAULT_GUI_LANDING_SCREEN_EXTENSIONS/ScrollContainer"]
margin_right = 1547.0
size_flags_horizontal = 3

[node name="DEFAULT_GUI_LANDING_SCREEN_SETTINGS" type="PanelContainer" parent="RootControl/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.5
margin_top = 35.5
margin_right = -7.5
margin_bottom = -7.5
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Settings" parent="RootControl/TabContainer/DEFAULT_GUI_LANDING_SCREEN_SETTINGS" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 9.0
margin_top = 6.0
margin_right = 1556.0
margin_bottom = 831.0

[node name="DEFAULT_GUI_LANDING_SCREEN_ABOUT" type="PanelContainer" parent="RootControl/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.5
margin_top = 35.5
margin_right = -7.5
margin_bottom = -7.5
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="About" parent="RootControl/TabContainer/DEFAULT_GUI_LANDING_SCREEN_ABOUT" instance=ExtResource( 5 )]
